Update integrations to v2. Add beta alert. Align footer copyright. Fix integration sidebar links.

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -51,8 +51,10 @@
         }
       }
       &.copyright {
-        font-weight: bold;
-        color: #ffffff;
+        a {
+          font-weight: bold;
+          color: #ffffff;
+        }
       }
     }
     @include media-breakpoint-up(sm) {
