--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -14,6 +14,6 @@
   }
   @include media-breakpoint-up(lg) {
     background-size: 55%;
-    background-position: 100% 70px;
+    background-position: 100% 130px;
   }
 }
